content: Use lower command buffer memory for OOP raster contexts.

Since most commands with OOP raster are paint commands sent via the
transfer buffer and not GL commands sent via the command buffer, we
can use a much smaller command buffer.

R=piman@chromium.org

Bug: 859635
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I8a52395b40f240d774ea2f54cc7f4961ab0ac2ce
Reviewed-on: https://chromium-review.googlesource.com/1134471
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574732}
Former-commit-id: 2fc1e3d1e3915159b3c7053d2c37b116fd18bb31